{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Player",
            "id": "4e57d49c-8911-4acd-8042-eff5cd4fa3f6",
            "actions": [
                {
                    "name": "PlayerMove",
                    "type": "Value",
                    "id": "138b03c2-96f9-4acb-b592-93a62e5373a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "bc166140-0379-4d1f-88e9-1638f564ef90",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "95b071c8-5e98-4a55-8658-dfb160b641eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "edfbfdc2-aaa1-4c4a-8395-b807e667be0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5925d4a5-4b21-4339-b279-cf329414e924",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "aadb398c-223d-4da6-9736-e4781e95762a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Defend",
                    "type": "Button",
                    "id": "cda89668-34cb-4a1b-a621-10b160101d6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "447d6a52-7dc8-4726-87ed-49f913e8de6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchSword",
                    "type": "Button",
                    "id": "6349af1a-d29a-4989-8ae8-dd1356ecaa39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "LockEnemy",
                    "type": "Button",
                    "id": "c9a925e4-5f46-4b07-bd36-e358a9ea5f98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerMoveRaw",
                    "type": "Value",
                    "id": "8b374399-58a7-4ab1-b323-3ca132ecd36b",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.1,max=0.1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LAtk",
                    "type": "Button",
                    "id": "0961248d-b280-4e9c-aeda-28450131d73b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "29bd205d-eb3f-453b-a43a-fd15fdacd490",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c1f3c212-6a16-48d6-aad1-7a58e6852061",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "976f9797-870f-4987-9fc7-34f454caee76",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7df34880-1f1a-41a5-ba2e-cf6e5edcc718",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33cd2c17-5ec6-44fa-8ee9-1651595eee6c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d358d089-bf6c-4cbe-ba74-e21b3c0b7f2c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d07b3eb5-32b8-4801-9506-909c8bf6b5e1",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a4b4e0d-8c12-44e9-ab0b-41410394e7ee",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92cf5ad5-cef2-4b85-b6ba-249f2d80e071",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a956514-78f8-4734-821b-75a40e18ac5f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b90a481f-8548-44ad-9a4b-9add06518383",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Defend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cef6e436-b1ce-4f2f-89ac-73c90575dc50",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d85e5c4-fc07-4b8d-8180-58120549fdbc",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5ab1d72-0ec2-4809-8f01-4b6310821d1c",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockEnemy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "a918f1b2-6aa0-4612-83cd-7f354e65f74e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMoveRaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4971e946-ca2e-4716-8c79-ce1bb354147e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMoveRaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1aa911f5-ab1f-4ef4-a79d-8e896ead3d49",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMoveRaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "56de28cf-bda0-40b1-8b85-d9b06c2998d8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMoveRaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1b4ee4e1-993a-4936-8eda-4196ad3299b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PlayerMoveRaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "231c1c33-9810-4248-a435-da572fa47f69",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LAtk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoard&Mouse",
            "bindingGroup": "KeyBoard&Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}